@@ -1,0 +1,2 @@
+* basic specs for connecting through rufus-tokyo
+* basic saving of attributes to a table database record
