@@ -1,0 +1,3 @@
+DataMapper::Logger.new(nil, :debug)
+
+Dir["#{File.dirname(__FILE__)}/*_spec.rb"].each { |path| load(path) }
