@@ -1,4 +1,5 @@
 === 0.0.1 / 2009-02-12
 
-* Release!
+* Connect to ttserver with table api
+* Save an object by its attributes
 
